update README update create-release workflow update lists to not use Arrays.asList() and to use Collection.singletonList() for single item lists